--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "webpack.config.js",
   "dependencies": {
+    "auth0-lock": "^10.4.0",
     "babel-core": "^6.11.4",
     "babel-loader": "^6.2.0",
     "babel-plugin-add-module-exports": "^0.1.2",
@@ -17,6 +18,7 @@
     "flux": "^2.1.1",
     "history": "^1.17.0",
     "jquery": "^3.1.0",
+    "jwt-decode": "^2.1.0",
     "lodash": "^4.14.1",
     "moment": "^2.14.1",
     "randomcolor": "^0.4.4",
