--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "extract-text-webpack-plugin": "^1.0.1",
     "flux": "^2.1.1",
     "history": "^1.17.0",
+    "immutable": "^3.8.1",
     "jquery": "^3.1.0",
     "jwt-decode": "^2.1.0",
     "lodash": "^4.14.1",
