--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "webpack-dev-server": "^1.14.1"
   },
   "devDependencies": {
+    "babel-eslint": "^6.1.2",
     "css-loader": "^0.23.1",
     "eslint": "^3.7.1",
     "eslint-config-airbnb": "^12.0.0",
