--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-router": "^2.0.0",
     "react-search-input": "^0.10.1",
     "react-select": "^1.0.0-beta14",
+    "react-social-icons": "^2.5.1",
     "remarkable": "^1.6.2",
     "sass-loader": "^4.0.0",
     "webpack-dev-server": "^1.14.1"
