--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "webpack.config.js",
   "dependencies": {
-    "auth0-lock": "10.4.0",
+    "auth0-lock": "^10.4.0",
     "babel-core": "^6.11.4",
     "babel-loader": "^6.2.0",
     "babel-plugin-add-module-exports": "^0.1.2",
