--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "auth0-lock": "^10.4.0",
     "babel-core": "^6.11.4",
+    "babel-eslint": "^7.1.0",
     "babel-loader": "^6.2.0",
     "babel-plugin-add-module-exports": "^0.1.2",
     "babel-plugin-react-html-attrs": "^2.0.0",
@@ -14,6 +15,7 @@
     "babel-preset-es2015": "^6.3.13",
     "babel-preset-react": "^6.3.13",
     "babel-preset-stage-0": "^6.3.13",
+    "eslint-import-resolver-webpack": "^0.7.0",
     "extract-text-webpack-plugin": "^1.0.1",
     "flux": "^2.1.1",
     "history": "^1.17.0",
