--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "babel-preset-es2015": "^6.3.13",
     "babel-preset-react": "^6.3.13",
     "babel-preset-stage-0": "^6.3.13",
+    "components": "^0.1.0",
     "extract-text-webpack-plugin": "^1.0.1",
     "flux": "^2.1.1",
     "history": "^1.17.0",
@@ -36,6 +37,7 @@
     "react-social-icons": "^2.5.1",
     "remarkable": "^1.6.2",
     "sass-loader": "^4.0.0",
+    "util": "^0.10.3",
     "webpack-dev-server": "^1.14.1"
   },
   "devDependencies": {
