--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -22,6 +22,8 @@
         //These rules are in place because eslint import resolver webpack refuses to do its job
         "import/no-unresolved": 0,
         "import/no-extraneous-dependencies": 0,
-        "import/extensions": 0
+        "import/extensions": 0,
+        "jsx-a11y/no-static-element-interactions": 0,
+        "react/jsx-boolean-value": 0
     }
 }
