--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -33,6 +33,8 @@
                 "allow": ["warn", "error"]
             }
         ],
-        "class-methods-use-this": 0
+        "class-methods-use-this": 0,
+        "jsx-a11y/no-static-element-interactions": 0,
+        "react/jsx-boolean-value": 0
     }
 }
