--- a/package.json
+++ b/package.json
@@ -14,14 +14,15 @@
     "babel-preset-es2015": "6.22.0",
     "babel-preset-react": "6.22.0",
     "babel-preset-stage-0": "6.22.0",
+    "css-loader": "0.23.1",
     "extract-text-webpack-plugin": "1.0.1",
     "flux": "2.1.1",
     "history": "1.17.0",
-    "immutable": "3.8.1",
     "jquery": "3.1.1",
     "jwt-decode": "2.1.0",
     "lodash": "4.17.4",
     "moment": "2.17.1",
+    "node-sass": "3.13.1",
     "randomcolor": "0.4.4",
     "react": "15.4.2",
     "react-bootstrap": "^0.30.6",
@@ -36,19 +37,16 @@
     "react-social-icons": "2.5.1",
     "remarkable": "1.7.1",
     "sass-loader": "4.1.1",
+    "style-loader": "0.13.1",
+    "webpack": "1.14.0",
     "webpack-dev-server": "1.16.3"
   },
   "devDependencies": {
-    "css-loader": "0.23.1",
     "eslint": "3.15.0",
     "eslint-config-airbnb": "13.0.0",
     "eslint-plugin-import": "2.2.0",
     "eslint-plugin-jsx-a11y": "2.2.3",
-    "eslint-plugin-react": "6.9.0",
-    "node-sass": "3.13.1",
-    "sass-loader": "4.1.1",
-    "style-loader": "0.13.1",
-    "webpack": "1.14.0"
+    "eslint-plugin-react": "6.9.0"
   },
   "scripts": {
     "organizer-dev": "webpack-dev-server --content-base build/organizer --port 8080",
