--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -5,6 +5,11 @@
         "jsx-a11y",
         "import"
     ],
+    "parser": "babel-eslint",
+    "parserOptions": {
+        "sourceType": "module",
+        "allowImportExportEverywhere": false
+    },
     "settings": {
         "import/parser": "babel-eslint",
         "import/resolver": {
@@ -17,6 +22,12 @@
         //These rules are in place because eslint import resolver webpack refuses to do its job
         "import/no-unresolved": 0,
         "import/no-extraneous-dependencies": 0,
-        "import/extensions": 0
+        "import/extensions": 0,
+        "no-console": [
+            "error", {
+                "allow": ["warn", "error"]
+            }
+        ],
+        "class-methods-use-this": 0
     }
 }
