--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -13,6 +13,11 @@
             }
         }
     },
+    "env": {
+        "browser": true,
+        "node": true
+    },
+
     "parser": "babel-eslint",
     "parserOptions": {
     "sourceType": "module",
@@ -24,6 +29,7 @@
         "import/no-extraneous-dependencies": 0,
         "import/extensions": 0,
         "jsx-a11y/no-static-element-interactions": 0,
-        "react/jsx-boolean-value": 0
+        "react/jsx-boolean-value": 0,
+        "react/no-multi-comp": 0
     }
 }
