--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -18,6 +18,11 @@
             }
         }
     },
+    "env": {
+        "browser": true,
+        "node": true
+    },
+
     "parser": "babel-eslint",
     "parserOptions": {
     "sourceType": "module",
@@ -35,6 +40,7 @@
         ],
         "class-methods-use-this": 0,
         "jsx-a11y/no-static-element-interactions": 0,
-        "react/jsx-boolean-value": 0
+        "react/jsx-boolean-value": 0,
+        "react/no-multi-comp": 0
     }
 }
