--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "randomcolor": "0.4.4",
     "react": "15.4.2",
     "react-bootstrap": "^0.30.6",
+    "react-bootstrap-table": "^3.1.1",
     "react-date-picker": "5.3.28",
     "react-dom": "15.4.2",
     "react-dropzone": "3.10.0",
