fix dependency tree

--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "moment": "2.17.1",
     "node-sass": "3.13.1",
     "randomcolor": "0.4.4",
+    "react": "15.3.2",
     "react-date-picker": "5.3.28",
+    "react-dom": "15.3.2",
     "react-dropzone": "3.10.0",
     "react-icons": "2.2.3",
     "react-notification": "6.6.0",
