--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-dropzone": "3.10.0",
     "react-icons": "2.2.3",
     "react-notification": "6.6.0",
+    "react-responsive-sidebar": "^0.1.16",
     "react-router": "2.8.1",
     "react-search-input": "0.10.4",
     "react-select": "1.0.0-rc.3",
