--- a/package.json
+++ b/package.json
@@ -20,6 +20,9 @@
     "jwt-decode": "2.1.0",
     "moment": "2.17.1",
     "node-sass": "3.13.1",
+    "postcss": "^5.2.16",
+    "postcss-cssnext": "^2.10.0",
+    "postcss-loader": "^1.3.3",
     "randomcolor": "0.4.4",
     "react": "15.3.2",
     "react-date-picker": "5.3.28",
