--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "react-search-input": "0.10.4",
     "react-select": "1.0.0-rc.3",
     "react-social-icons": "2.5.1",
+    "react-toolbox": "^2.0.0-beta.7",
     "sass-loader": "4.1.1",
     "style-loader": "0.13.1",
     "webpack": "1.14.0"
