--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "babel-preset-stage-0": "6.22.0",
     "components": "0.1.0",
     "css-loader": "0.23.1",
+    "exif-js": "^2.2.1",
     "extract-text-webpack-plugin": "1.0.1",
     "flux": "2.1.1",
     "jwt-decode": "2.1.0",
@@ -27,7 +28,7 @@
     "react": "15.4.2",
     "react-date-picker": "5.3.28",
     "react-dom": "15.4.2",
-    "react-dropzone": "3.10.0",
+    "react-dropzone": "^3.10.0",
     "react-icons": "2.2.3",
     "react-modal": "1.7.3",
     "react-notification": "6.6.0",
